# rir

./: .clang-format  .cppcheck_suppressions  .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  .gnur_head  .travis.yml  .valgrind_suppressions  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_RIR.md  connect.R  loadRir.R  loadRjit  printAST.R  recording.R  replayer.r  rsync-recommended  test.r  tests.R  text.txt  wercker.yml
.pir/: configuration.ini.example
baseContainer/: README.mk  update.sh
benchmarks/: benchmarks.r  graphlog.r  run.r
bitcodes/Bounce/: BE:7350164535010589288_1_15.bc  GE:17056311610456449062_1_16655.bc  GE:17792245099434860354_1_15.bc  GE:608850130755180530_1_15.bc  GE:608850130755180530_2_15.bc  GE:7083985844911782881_1_136347663.bc  NS:base:5681312570640809761_1_1099511627791.bc  NS:base:7626044918518158911_1_1099514822671.bc
bitcodes/Bounce_nonames/: BE:7350164535010589288_1_15.bc  GE:3742710416559747058_1_15.bc  GE:3742710416559747058_3_15.bc  GE:3742710416559747058_5_15.bc  GE:6397177157431309881_1_16655.bc  GE:7083985844911782881_1_136347663.bc  NS:base:5681312570640809761_1_1099511627791.bc  NS:base:7626044918518158911_1_1099514822671.bc
bitcodes/Bounce_nonames_simple/: BE:7350164535010589288_1_15.bc  GE:3128222109680402418_1_15.bc  GE:3128222109680402418_3_15.bc  GE:3128222109680402418_5_15.bc  GE:6397177157431309881_1_16655.bc  GE:7083985844911782881_1_136347663.bc  NS:base:5681312570640809761_1_1099511627791.bc  NS:base:7626044918518158911_1_1099514822671.bc
bitcodes/Mandelbrot/: BE:7350164535010589288_1_15.bc  GE:15740544052859267337_1_136347663.bc  GE:4607721095495133206_1_16399.bc  GE:4607721095495133206_1_68173839.bc  GE:6812338248726832941_1_68173839.bc  NS:base:3206135521034569687_1_12888097295.bc  NS:base:3206135521034569687_1_4296032271.bc  NS:base:6292176676972859162_1_204521487.bc  NS:base:6292176676972859162_1_8660238351.bc
bitcodes/Storage/: BE:7350164535010589288_1_15.bc  GE:4944581891250548555_1_15.bc  GE:7083985845033806817_1_136347663.bc  GE:9158858300051824992_1_15.bc  GE:9158858300051824992_1_4296032527.bc
bitcodes/binarytrees_binarytrees/: BE:7350164535010589288_1_15.bc  GE:14037482170795232416_1_15.bc  GE:14623153034719562920_1_16399.bc  GE:14623153034719562920_26_15.bc  GE:14623153034719562920_49_15.bc  GE:1647491456783345704_1_15.bc  GE:1647491456783345704_1_204521487.bc  GE:1647491456783345704_1_49167.bc  GE:9944961374716431213_1_68173839.bc  NS:base:10518062263503675729_1_1099514823183.bc  NS:base:11955348703369308401_1_1064975.bc  NS:base:13300479798160494959_1_3298534883343.bc  NS:base:2388278257617689797_1_15.bc  NS:base:243532261686856620_1_15.bc  NS:base:4473585943775939977_1_3298534883343.bc  NS:base:5681312570640809761_1_1099511627791.bc  NS:base:7626044918518158911_1_1099513757711.bc  NS:base:8300946583594429239_1_2199023272207.bc  NS:base:8457150312619263573_1_1099511627791.bc  NS:base:9611554486532256901_1_3299012101391.bc  NS:base:9611554486532256901_2_68173839.bc
bitcodes/binarytrees_binarytrees_2/: BE:7350164535010589288_1_15.bc  GE:14037482170795232416_1_15.bc  GE:1824168773410946876_1_68173839.bc  GE:6632374069877182074_1_12888097039.bc  GE:6632374069877182074_1_15.bc  GE:7045534553230853800_1_16399.bc  GE:7045534553230853800_1_68173839.bc  GE:7045534553230853800_26_15.bc  GE:7045534553230853800_49_15.bc  NS:base:10518062263503675729_1_1099514823183.bc  NS:base:11436512901153860993_1_3195663.bc  NS:base:11955348703369308401_1_1064975.bc  NS:base:13300479798160494959_1_3298534883343.bc  NS:base:14295171677852562252_14_1065231.bc  NS:base:15085287738311679130_1_2199028581391.bc  NS:base:17421284610077016947_1_1099512692751.bc  NS:base:2388278257617689797_1_15.bc  NS:base:243532261686856620_1_15.bc  NS:base:4473585943775939977_1_3298534916623.bc  NS:base:4473585943775939977_1_3298537013775.bc  NS:base:5681312570640809761_1_1099511627791.bc  NS:base:5681312570640809761_1_1099512692751.bc  NS:base:7626044918518158911_1_1099513757711.bc  NS:base:8300946583594429239_1_2199023272207.bc  NS:base:8457150312619263573_1_1099511627791.bc  NS:base:9611554486532256901_1_3328607110415.bc  NS:base:9611554486532256901_2_4296032271.bc
bitcodes/binarytrees_binarytrees_naive/: BE:7350164535010589288_1_15.bc  GE:14037482170795232416_1_15.bc  GE:15108768632749311355_1_68173839.bc  GE:4777545250641122636_1_16399.bc  GE:4777545250641122636_1_68173839.bc  GE:6632374069877182074_1_12888097039.bc  GE:6632374069877182074_1_15.bc  GE:6632374069877182074_1_8660238351.bc  NS:base:11436512901153860993_1_3195663.bc  (+7 more)
container/: build-releaseassert.sh  cleanup.rb  install-test-deps.sh
demo/: demo.R  demo_rir.R  demo_rir.txt
documentation/: benchmarking.md  compiler-server.md  debugging.md  development.md  elision-measuring.md  measuring.md  pir.md  prototype.md  recording.md  rir.md  spec-opt.md  updating-gnur.md
examples/: mandelbrot_mini.R  tree_mini.r
experiment/: deoptless-dataframe.R  deoptless-dataframe.r  harness.r  rebench.conf
harnesses/: AWFharness.r  GSE5859Subset.rda  RTharness.r  SOharness.r  Sharness.r  eda_for_highthroughput.Rmd  installDeps.R  rebench.conf  runner.R  sim_rebench.conf
local/: .Rprofile
prototype/: annotation.R
rjit/: DESCRIPTION  Doxyfile  NAMESPACE  rjit-package.Rd
rshrunner/: analyzeRecordingLog.R  general.sh  recordRdsToCsv.R  runMaster.sh  runMasterRecording.sh
tools/: .dropbox_uploader  R  Rj  Rscript  bench-speedup-plot.r  bench-speedup-rir-history.r  bench-speedup.sh  benchmark-plot.r  benchmark-revisions-plot.r  benchmark-revisions.sh  benchmark.sh  build-gnur-no-internet.sh  build-gnur.sh  build-libjit.sh  build-llvm.sh  build-zeromq.sh  build-zmq.sh  check-gnur-make-tests-error  check_gnur  ci.sh  cleanup_ir.sh  codegen_handlers.py  codegen_intrinsics.py  codegen_passes.py  compile_time.sh  compiler_wrapper.sh  copy-logs.sh  cppcheck  creduce  downloadBenchs.sh  dropbox_uploader.sh  fetch-llvm.sh  git-clang-format  gnur-make  gnur-make-tests  gnur_tests.sh  hook  install_hooks.sh  integration_tests  integration_tests.sh  (+26 more)
(+2857 files in other folders)
